# mini-hadoop

./: .gitignore  ARCHITECTURE.md  Aristotle.md  CMakeLists.txt  PLAN.md  Plato.md  README.md  Socrates.md
config/: mini-hadoop.toml
src/: CMakeLists.txt  main.cpp
src/common/: error.h
src/io/: buffer.h  md5.h  sequence_file.h  writable.h  writable_types.h
src/ipc/: client.h  server.h
src/mapred/: dist_job_tracker.h  job_tracker.h  task_tracker.h
src/mapred/api/: input_format.h  mapper.h  ndfs_io.h
src/mapred/examples/: wordcount.h
src/ndfs/: block.h  block_storage.h  data_node.h  data_xceive_server.h  datanode_info.h  dfs_client.h  fs_namesystem.h  fsimage.h  inode_tree.h  name_node.h
tests/: CMakeLists.txt  full_chain_test.cpp  full_dist_chain_test.cpp  stress_test.cpp
tests/common/: error_test.cpp
tests/io/: buffer_test.cpp  md5_test.cpp  sequence_file_test.cpp  writable_types_test.cpp
tests/ipc/: ipc_test.cpp
tests/mapred/: dist_mapred_test.cpp  mapred_test.cpp
tests/ndfs/: block_storage_test.cpp  fs_namesystem_test.cpp  inode_tree_test.cpp  ndfs_integration_test.cpp
